# uav-lidar-autonomy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
catkin_ws/src/uav_lidar_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/uav_lidar_bringup/config/rviz/: uav_lidar.rviz
catkin_ws/src/uav_lidar_bringup/launch/: uav_lidar_system.launch
catkin_ws/src/uav_lidar_mapping/: CMakeLists.txt  package.xml
catkin_ws/src/uav_lidar_mapping/config/: hector_mapping_params.yaml
catkin_ws/src/uav_lidar_mapping/launch/: hector_slam.launch
catkin_ws/src/uav_lidar_processing/: CMakeLists.txt  package.xml
catkin_ws/src/uav_lidar_processing/config/: processing_params.yaml
catkin_ws/src/uav_lidar_processing/launch/: lidar_processing.launch
catkin_ws/src/uav_lidar_processing/src/: drone_waypoint_controller.py  lidar_processor_node.py  obstacle_map_node.py  uav_navigator.py
catkin_ws/src/uav_lidar_sim/: CMakeLists.txt  package.xml
catkin_ws/src/uav_lidar_sim/launch/: spawn_uav.launch
catkin_ws/src/uav_lidar_sim/urdf/: quadrotor_lidar.urdf.xacro
catkin_ws/src/uav_lidar_sim/worlds/: warehouse.world
docs/: architecture.md  lidar_pipeline.md  navigation.md  setup_wsl2.md
images/: PLACEHOLDER.md
scripts/: build.sh  install_deps.sh  run_simulation.sh  setup.sh  validate_pipeline.sh
