<?xml version="1.0"?>
<package format="2">
  <name>uav_lidar_processing</name>
  <version>1.0.0</version>
  <description>
    UAV LiDAR point cloud processing package. Implements passthrough filtering,
    voxel-grid downsampling, ground removal, and conversion to 2D LaserScan
    for the SLAM pipeline.
  </description>
  <maintainer email="hamza@uav-lidar.local">Hamza</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
